--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,45 @@
-<p>login works!</p>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<section class="vh-100" style="background-color: #eee">
+  <div class="container vh-100">
+    <div class="row d-flex justify-content-center align-items-center vh-100">
+      <div class="card text-black" style="border-radius: 25px">
+        <div class="card-body p-md-5">
+          <div class="row justify-content-center">
+            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+              <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Ingresa a tu cuenta</p>
+
+              <form class="mx-1 mx-md-4" [formGroup]="userForm" (submit)="login()">
+
+                <div class="d-flex flex-row align-items-center mb-4">
+                  <i class="fa fa-envelope fa-lg me-3 fa-fw"></i>
+                  <div class="flex-fill mb-0">
+                    <input type="number" id="username" class="form-control" formControlName="username" placeholder="Username">
+                    <span *ngIf="userForm.controls['username'].hasError('required') && userForm.controls['username'].touched">Campo requerido</span>
+                  </div>
+                </div>
+
+                <div class="d-flex flex-row align-items-center mb-4">
+                  <i class="fa fa-lock fa-lg me-3 fa-fw"></i>
+                  <div class="flex-fill mb-0">
+                    <input type="password" id="password" class="form-control" formControlName="password" placeholder="Contraseña">
+                    <span *ngIf="userForm.controls['password'].hasError('required') && userForm.controls['password'].touched">Campo requerido</span>
+                  </div>
+                </div>
+
+                <div class="form-check d-flex justify-content-center mb-5">
+                  <p class="form-check-label">¿No tienes cuenta? <a href="/login" class="form-check-label">Registrate</a></p>
+                </div>
+
+                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                  <button class="btn btn-primary btn-lg" [disabled]="!userForm.valid">Iniciar Sesión</button>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
