--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="form-check d-flex justify-content-center mb-5">
-                  <p class="form-check-label">¿No tienes cuenta? <a href="/login" class="form-check-label">Registrate</a></p>
+                  <p class="form-check-label">¿No tienes cuenta? <a href="/register" class="form-check-label">Registrate</a></p>
                 </div>
 
                 <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
