--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,11 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>UReceipt</title>
   </head>
   <body>
     <!-- Header-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <a class="navbar-brand" href="#">
         <img src="../../../assets/logosinfondo.png" height="30" alt="">
         UReceipt
@@ -22,7 +22,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
           </li>
@@ -45,29 +45,26 @@
     <!-- Presentacion-->
     <section class="container-fluid">
       <div class="row">
-        <div class="col">
-          <h1>Finanzas e</h1>
-          <h1>ingeniería</h1>
-
-          <ul>
-            <li>Nicoll Yamira Malca Rojas</li>
-            <li>Julissa Karol Ponte Isminio</li>
-            <li>Franco Casanova Salirrosas</li>
-            <li>Carlos Alfonso Colina Flores</li>
-            <li>Bruno Gustavo Carrasco Romero</li>
-            <li>Sebastián Alonso Arana del Carpio</li>
-            <li>Wilmar Alonso Tarazona Chafloque</li>
-          </ul>
-
-          <div class="row align-items-center">
-            <div class="col text-right">
-              <span>José Manuel Martín<br>Senmache Sarmiento</span>
-            </div>
-            <div class="col">
-              <img src="../../../assets/profesor.png" height="193" alt="">
-            </div>
+        <div class="col bg-primary">
+          <div class="container p-5">
+            <h1 class="font-weight-bold text-white">Finanzas e</h1>
+            <h1 class="font-weight-bold text-danger">ingeniería</h1>
           </div>
-
+          <div class="container p-4 text-white font-weight-bold">
+            <ul>
+              <li>Nicoll Yamira Malca Rojas</li>
+              <li>Julissa Karol Ponte Isminio</li>
+              <li>Franco Casanova Salirrosas</li>
+              <li>Carlos Alfonso Colina Flores</li>
+              <li>Bruno Gustavo Carrasco Romero</li>
+              <li>Sebastián Alonso Arana del Carpio</li>
+              <li>Wilmar Alonso Tarazona Chafloque</li>
+            </ul>
+          </div>
+          <div class="text-right text-white align-items-center d-flex justify-content-end">
+            <span>José Manuel Martín<br>Senmache Sarmiento</span>
+            <img src="../../../assets/profesor.png" height="193" alt="">
+          </div>
         </div>
 
         <div class="col">
@@ -78,12 +75,14 @@
     <!-- Inicio de sesión-->
     <section class="container-fluid">
       <div class="row">
-        <div class="col bg-info">
-          <h1>INICIO DE</h1>
-          <h1>SESIÓN</h1>
+        <div class="col bg-secondary container p-5">
+          <div>
+            <h1 class="font-weight-bold">INICIO DE</h1>
+            <h1>SESIÓN</h1>
+          </div>
         </div>
 
-        <div class="col">
+        <div class="col p-4">
           <div class="card text-center" style="width: 60%">
             <div>
               <img src="../../../assets/logo.png"  height="124" alt="">
@@ -110,79 +109,111 @@
     </section>
 
     <!--    Introducción-->
-    <section class="container-fluid bg-info text-center">
-      <h1>Introducción</h1>
-      <p>
-        Debido a la situación crítica a causa del COVID-19, distintas actividades se han visto obligadas a cambiar a medios digitales para evitar el posible contacto entre dos personas. Los recibos por honorarios no son la excepción e instituciones gubernamentales como la SUNAT han hecho cambios en su sistema y página web para poder realizar emisiones de recibos por honorarios electrónicos.
-        <br><br>
-        En el presente trabajo utilizaremos los conceptos aprendidos durante el curso de Finanzas e Ingeniería Económica para dar una solución eficiente que detalle la información y operaciones necesarias en un recibo por honorarios. Por ello, nuestro equipo optó por desarrollar una aplicación web que facilite lo antes mencionado. Esperamos cumplir con nuestro propósito de manera sobresaliente y orientar a las personas que decidan utilizar nuestra aplicación web.
-      </p>
+    <section class="container-fluid bg-primary text-center p-4">
+      <div class="container">
+        <h1 class="font-weight-bold">Introducción</h1>
+        <p>
+          Debido a la situación crítica a causa del COVID-19, distintas actividades se han visto obligadas a cambiar a medios digitales para evitar el posible contacto entre dos personas. Los recibos por honorarios no son la excepción e instituciones gubernamentales como la SUNAT han hecho cambios en su sistema y página web para poder realizar emisiones de recibos por honorarios electrónicos.
+          <br><br>
+          En el presente trabajo utilizaremos los conceptos aprendidos durante el curso de Finanzas e Ingeniería Económica para dar una solución eficiente que detalle la información y operaciones necesarias en un recibo por honorarios. Por ello, nuestro equipo optó por desarrollar una aplicación web que facilite lo antes mencionado. Esperamos cumplir con nuestro propósito de manera sobresaliente y orientar a las personas que decidan utilizar nuestra aplicación web.
+        </p>
+      </div>
     </section>
 
     <!--    Nosotros-->
-    <section class="container-fluid text-center">
-      <h1>Nosotros</h1>
+    <section class="container-fluid text-center p-4 bg-secondary">
+      <div class="container">
+        <h1 class="font-weight-bold">Nosotros</h1>
 
-      <div class="row justify-content-around">
-        <div class="card text-white" style="width: 196px">
-          <img src="../../../assets/integrantes/sebastianarana.jpg" class="card-img" height="236" alt="">
-          <div class="card-img-overlay">
-            <h5>Sebastián Arana</h5>
-            <h6>Ing. Ciencias de la computación</h6>
+        <div class="row justify-content-around p-5">
+          <div class="card text-white" style="width: 196px">
+            <img src="../../../assets/integrantes/sebastianarana.jpg" class="card-img" height="236" alt="">
+            <div class="card-img-overlay">
+              <h5>Sebastián Arana</h5>
+              <h6>Ing. Ciencias de la computación</h6>
+            </div>
+          </div>
+
+          <div class="card text-white" style="width: 196px">
+            <img src="../../../assets/integrantes/carloscolina.png" class="card-img" height="236" alt="">
+            <div class="card-img-overlay">
+              <h5>Sebastián Arana</h5>
+              <h6>Ing. Ciencias de la computación</h6>
+            </div>
+          </div>
+
+          <div class="card text-white" style="width: 196px">
+            <img src="../../../assets/integrantes/francocasanova.png" class="card-img" height="236" alt="">
+            <div class="card-img-overlay">
+              <h5>Sebastián Arana</h5>
+              <h6>Ing. Ciencias de la computación</h6>
+            </div>
+          </div>
+
+          <div class="card text-white" style="width: 196px">
+            <img src="../../../assets/integrantes/julissaponte.png" class="card-img" height="236" alt="">
+            <div class="card-img-overlay">
+              <h5>Sebastián Arana</h5>
+              <h6>Ing. Ciencias de la computación</h6>
+            </div>
           </div>
         </div>
 
-        <div class="card text-white" style="width: 196px">
-          <img src="../../../assets/integrantes/carloscolina.png" class="card-img" height="236" alt="">
-          <div class="card-img-overlay">
-            <h5>Sebastián Arana</h5>
-            <h6>Ing. Ciencias de la computación</h6>
+        <div class="row justify-content-around p-5">
+          <div class="card text-white" style="width: 196px">
+            <img src="../../../assets/integrantes/nicollrojas.png" class="card-img" height="236" alt="">
+            <div class="card-img-overlay">
+              <h5>Sebastián Arana</h5>
+              <h6>Ing. Ciencias de la computación</h6>
+            </div>
           </div>
-        </div>
 
-        <div class="card text-white" style="width: 196px">
-          <img src="../../../assets/integrantes/francocasanova.png" class="card-img" height="236" alt="">
-          <div class="card-img-overlay">
-            <h5>Sebastián Arana</h5>
-            <h6>Ing. Ciencias de la computación</h6>
+          <div class="card text-white" style="width: 196px">
+            <img src="../../../assets/integrantes/brunocarrasco.png" class="card-img" height="236" alt="">
+            <div class="card-img-overlay">
+              <h5>Sebastián Arana</h5>
+              <h6>Ing. Ciencias de la computación</h6>
+            </div>
           </div>
-        </div>
 
-        <div class="card text-white" style="width: 196px">
-          <img src="../../../assets/integrantes/julissaponte.png" class="card-img" height="236" alt="">
-          <div class="card-img-overlay">
-            <h5>Sebastián Arana</h5>
-            <h6>Ing. Ciencias de la computación</h6>
+          <div class="card text-white" style="width: 196px">
+            <img src="../../../assets/integrantes/wilmartarazona.png" class="card-img" height="236" alt="">
+            <div class="card-img-overlay">
+              <h5>Sebastián Arana</h5>
+              <h6>Ing. Ciencias de la computación</h6>
+            </div>
           </div>
         </div>
       </div>
-
-      <div class="row justify-content-around">
-        <div class="card text-white" style="width: 196px">
-          <img src="../../../assets/integrantes/nicollrojas.png" class="card-img" height="236" alt="">
-          <div class="card-img-overlay">
-            <h5>Sebastián Arana</h5>
-            <h6>Ing. Ciencias de la computación</h6>
-          </div>
-        </div>
-
-        <div class="card text-white" style="width: 196px">
-          <img src="../../../assets/integrantes/brunocarrasco.png" class="card-img" height="236" alt="">
-          <div class="card-img-overlay">
-            <h5>Sebastián Arana</h5>
-            <h6>Ing. Ciencias de la computación</h6>
-          </div>
-        </div>
-
-        <div class="card text-white" style="width: 196px">
-          <img src="../../../assets/integrantes/wilmartarazona.png" class="card-img" height="236" alt="">
-          <div class="card-img-overlay">
-            <h5>Sebastián Arana</h5>
-            <h6>Ing. Ciencias de la computación</h6>
-          </div>
-        </div>
-      </div>
-
     </section>
+
+    <!-- Footer -->
+    <footer id="footer" class="text-center text-lg-start bg-dark text-white">
+      <section class="p-4">
+        <div class="container text-center text-md-start mt-5">
+          <div class="row mt-3">
+
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+              <h4 class="fw-bold mb-4">UReceipt</h4>
+            </div>
+
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+              <h5 class="fw-bold mb-4">Información</h5>
+              <p><a href="#" class="text-reset">Inicio</a></p>
+              <p><a href="#" class="text-reset">Introducción</a></p>
+              <p><a href="#" class="text-reset">Nosotros</a></p>
+              <p><a href="#" class="text-reset">Iniciar Sesión</a></p>
+              <p><a href="#" class="text-reset">Registrarse</a></p>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2021 Copyright: UReceipt.com
+      </div>
+
+    </footer>
   </body>
 </html>
