fix: leer librerias

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,219 +1,205 @@
-<!doctype html>
-<html lang="es">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<!-- Header-->
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <a class="navbar-brand fs-1" href="#">
+    <img src="../../../assets/logosinfondo.png" height="30" alt="">
+    UReceipt
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Introducción</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Nosotros</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Iniciar Sesión</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Registrarse</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-    <title>UReceipt</title>
-  </head>
-  <body>
-    <!-- Header-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand" href="#">
-        <img src="../../../assets/logosinfondo.png" height="30" alt="">
-        UReceipt
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Introducción</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Iniciar Sesión</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Registrarse</a>
-          </li>
+<!-- Presentacion-->
+<section class="container-fluid bg-transparent">
+  <div class="row bg-transparent">
+    <div class="col bg-primary">
+      <div class="container p-5">
+        <h1 class="font-weight-bold text-white">Finanzas e</h1>
+        <h1 class="font-weight-bold text-danger">ingeniería</h1>
+      </div>
+      <div class="container p-4 text-white font-weight-bold">
+        <ul>
+          <li>Nicoll Yamira Malca Rojas</li>
+          <li>Julissa Karol Ponte Isminio</li>
+          <li>Franco Casanova Salirrosas</li>
+          <li>Carlos Alfonso Colina Flores</li>
+          <li>Bruno Gustavo Carrasco Romero</li>
+          <li>Sebastián Alonso Arana del Carpio</li>
+          <li>Wilmar Alonso Tarazona Chafloque</li>
         </ul>
       </div>
-    </nav>
+      <div class="text-right text-white align-items-center d-flex justify-content-end">
+        <span>José Manuel Martín<br>Senmache Sarmiento</span>
+        <img src="../../../assets/profesor.png" height="193" alt="">
+      </div>
+    </div>
 
-    <!-- Presentacion-->
-    <section class="container-fluid">
-      <div class="row">
-        <div class="col bg-primary">
-          <div class="container p-5">
-            <h1 class="font-weight-bold text-white">Finanzas e</h1>
-            <h1 class="font-weight-bold text-danger">ingeniería</h1>
-          </div>
-          <div class="container p-4 text-white font-weight-bold">
-            <ul>
-              <li>Nicoll Yamira Malca Rojas</li>
-              <li>Julissa Karol Ponte Isminio</li>
-              <li>Franco Casanova Salirrosas</li>
-              <li>Carlos Alfonso Colina Flores</li>
-              <li>Bruno Gustavo Carrasco Romero</li>
-              <li>Sebastián Alonso Arana del Carpio</li>
-              <li>Wilmar Alonso Tarazona Chafloque</li>
-            </ul>
-          </div>
-          <div class="text-right text-white align-items-center d-flex justify-content-end">
-            <span>José Manuel Martín<br>Senmache Sarmiento</span>
-            <img src="../../../assets/profesor.png" height="193" alt="">
-          </div>
+    <div class="col bg-transparent">
+    </div>
+  </div>
+</section>
+
+<!-- Inicio de sesión-->
+<section class="container-fluid">
+  <div class="row">
+    <div class="col bg-secondary container p-5">
+      <div>
+        <h1 class="font-weight-bold">INICIO DE</h1>
+        <h1>SESIÓN</h1>
+      </div>
+    </div>
+
+    <div class="col p-4">
+      <div class="card text-center mx-auto" style="width: 50%">
+        <div>
+          <img src="../../../assets/logo.png"  height="124" alt="">
         </div>
-
-        <div class="col">
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="numDocumento"></label>
+              <input type="number" class="form-control" id="numDocumento" placeholder="Documento">
+            </div>
+            <div class="form-group">
+              <label for="password"></label>
+              <input type="password" class="form-control" id="password" placeholder="Contraseña">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">INICIAR SESIÓN</button>
+          </form>
+          <a href="#" class="card-link text-reset">¿Olvidaste tu contraseña?</a>
+          <br>
+          <a href="#" class="card-link text-danger">Registrar una cuenta</a>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
 
-    <!-- Inicio de sesión-->
-    <section class="container-fluid">
-      <div class="row">
-        <div class="col bg-secondary container p-5">
-          <div>
-            <h1 class="font-weight-bold">INICIO DE</h1>
-            <h1>SESIÓN</h1>
-          </div>
-        </div>
+<!--    Introducción-->
+<section class="container-fluid bg-primary text-center text-white p-4">
+  <div class="container">
+    <h1 class="font-weight-bold">Introducción</h1>
+    <p class="font-weight-bold p-4">
+      Debido a la situación crítica a causa del COVID-19, distintas actividades se han visto obligadas a cambiar a medios digitales para evitar el posible contacto entre dos personas. Los recibos por honorarios no son la excepción e instituciones gubernamentales como la SUNAT han hecho cambios en su sistema y página web para poder realizar emisiones de recibos por honorarios electrónicos.
+      <br><br>
+      En el presente trabajo utilizaremos los conceptos aprendidos durante el curso de Finanzas e Ingeniería Económica para dar una solución eficiente que detalle la información y operaciones necesarias en un recibo por honorarios. Por ello, nuestro equipo optó por desarrollar una aplicación web que facilite lo antes mencionado. Esperamos cumplir con nuestro propósito de manera sobresaliente y orientar a las personas que decidan utilizar nuestra aplicación web.
+    </p>
+  </div>
+</section>
 
-        <div class="col p-4">
-          <div class="card text-center" style="width: 60%">
-            <div>
-              <img src="../../../assets/logo.png"  height="124" alt="">
-            </div>
-            <div class="card-body">
-              <form>
-                <div class="form-group">
-                  <label for="numDocumento"></label>
-                  <input type="number" class="form-control" id="numDocumento" placeholder="Documento">
-                </div>
-                <div class="form-group">
-                  <label for="password"></label>
-                  <input type="password" class="form-control" id="password" placeholder="Contraseña">
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">INICIAR SESIÓN</button>
-              </form>
-              <a href="#" class="card-link">¿Olvidaste tu contraseña?</a>
-              <br>
-              <a href="#" class="card-link">Registrar una cuenta</a>
-            </div>
-          </div>
+<!--    Nosotros-->
+<section class="container-fluid text-center p-4 bg-secondary">
+  <div class="container">
+    <h1 class="font-weight-bold text-primary">Nosotros</h1>
+
+    <div class="row justify-content-around p-5">
+      <div class="card text-white" style="width: 196px">
+        <img src="../../../assets/integrantes/sebastianarana.jpg" class="card-img" height="236" alt="">
+        <div class="card-img-overlay">
+          <h5>Sebastián Arana</h5>
+          <h6>Ing. Ciencias de la computación</h6>
         </div>
       </div>
-    </section>
 
-    <!--    Introducción-->
-    <section class="container-fluid bg-primary text-center p-4">
-      <div class="container">
-        <h1 class="font-weight-bold">Introducción</h1>
-        <p>
-          Debido a la situación crítica a causa del COVID-19, distintas actividades se han visto obligadas a cambiar a medios digitales para evitar el posible contacto entre dos personas. Los recibos por honorarios no son la excepción e instituciones gubernamentales como la SUNAT han hecho cambios en su sistema y página web para poder realizar emisiones de recibos por honorarios electrónicos.
-          <br><br>
-          En el presente trabajo utilizaremos los conceptos aprendidos durante el curso de Finanzas e Ingeniería Económica para dar una solución eficiente que detalle la información y operaciones necesarias en un recibo por honorarios. Por ello, nuestro equipo optó por desarrollar una aplicación web que facilite lo antes mencionado. Esperamos cumplir con nuestro propósito de manera sobresaliente y orientar a las personas que decidan utilizar nuestra aplicación web.
-        </p>
-      </div>
-    </section>
-
-    <!--    Nosotros-->
-    <section class="container-fluid text-center p-4 bg-secondary">
-      <div class="container">
-        <h1 class="font-weight-bold">Nosotros</h1>
-
-        <div class="row justify-content-around p-5">
-          <div class="card text-white" style="width: 196px">
-            <img src="../../../assets/integrantes/sebastianarana.jpg" class="card-img" height="236" alt="">
-            <div class="card-img-overlay">
-              <h5>Sebastián Arana</h5>
-              <h6>Ing. Ciencias de la computación</h6>
-            </div>
-          </div>
-
-          <div class="card text-white" style="width: 196px">
-            <img src="../../../assets/integrantes/carloscolina.png" class="card-img" height="236" alt="">
-            <div class="card-img-overlay">
-              <h5>Sebastián Arana</h5>
-              <h6>Ing. Ciencias de la computación</h6>
-            </div>
-          </div>
-
-          <div class="card text-white" style="width: 196px">
-            <img src="../../../assets/integrantes/francocasanova.png" class="card-img" height="236" alt="">
-            <div class="card-img-overlay">
-              <h5>Sebastián Arana</h5>
-              <h6>Ing. Ciencias de la computación</h6>
-            </div>
-          </div>
-
-          <div class="card text-white" style="width: 196px">
-            <img src="../../../assets/integrantes/julissaponte.png" class="card-img" height="236" alt="">
-            <div class="card-img-overlay">
-              <h5>Sebastián Arana</h5>
-              <h6>Ing. Ciencias de la computación</h6>
-            </div>
-          </div>
-        </div>
-
-        <div class="row justify-content-around p-5">
-          <div class="card text-white" style="width: 196px">
-            <img src="../../../assets/integrantes/nicollrojas.png" class="card-img" height="236" alt="">
-            <div class="card-img-overlay">
-              <h5>Sebastián Arana</h5>
-              <h6>Ing. Ciencias de la computación</h6>
-            </div>
-          </div>
-
-          <div class="card text-white" style="width: 196px">
-            <img src="../../../assets/integrantes/brunocarrasco.png" class="card-img" height="236" alt="">
-            <div class="card-img-overlay">
-              <h5>Sebastián Arana</h5>
-              <h6>Ing. Ciencias de la computación</h6>
-            </div>
-          </div>
-
-          <div class="card text-white" style="width: 196px">
-            <img src="../../../assets/integrantes/wilmartarazona.png" class="card-img" height="236" alt="">
-            <div class="card-img-overlay">
-              <h5>Sebastián Arana</h5>
-              <h6>Ing. Ciencias de la computación</h6>
-            </div>
-          </div>
+      <div class="card text-white" style="width: 196px">
+        <img src="../../../assets/integrantes/carloscolina.png" class="card-img" height="236" alt="">
+        <div class="card-img-overlay">
+          <h5>Sebastián Arana</h5>
+          <h6>Ing. Ciencias de la computación</h6>
         </div>
       </div>
-    </section>
 
-    <!-- Footer -->
-    <footer id="footer" class="text-center text-lg-start bg-dark text-white">
-      <section class="p-4">
-        <div class="container text-center text-md-start mt-5">
-          <div class="row mt-3">
-
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <h4 class="fw-bold mb-4">UReceipt</h4>
-            </div>
-
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-              <h5 class="fw-bold mb-4">Información</h5>
-              <p><a href="#" class="text-reset">Inicio</a></p>
-              <p><a href="#" class="text-reset">Introducción</a></p>
-              <p><a href="#" class="text-reset">Nosotros</a></p>
-              <p><a href="#" class="text-reset">Iniciar Sesión</a></p>
-              <p><a href="#" class="text-reset">Registrarse</a></p>
-            </div>
-
-          </div>
+      <div class="card text-white" style="width: 196px">
+        <img src="../../../assets/integrantes/francocasanova.png" class="card-img" height="236" alt="">
+        <div class="card-img-overlay">
+          <h5>Sebastián Arana</h5>
+          <h6>Ing. Ciencias de la computación</h6>
         </div>
-      </section>
-
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2021 Copyright: UReceipt.com
       </div>
 
-    </footer>
-  </body>
-</html>
+      <div class="card text-white" style="width: 196px">
+        <img src="../../../assets/integrantes/julissaponte.png" class="card-img" height="236" alt="">
+        <div class="card-img-overlay">
+          <h5>Sebastián Arana</h5>
+          <h6>Ing. Ciencias de la computación</h6>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-around p-5">
+      <div class="card text-white" style="width: 196px">
+        <img src="../../../assets/integrantes/nicollrojas.png" class="card-img" height="236" alt="">
+        <div class="card-img-overlay">
+          <h5>Sebastián Arana</h5>
+          <h6>Ing. Ciencias de la computación</h6>
+        </div>
+      </div>
+
+      <div class="card text-white" style="width: 196px">
+        <img src="../../../assets/integrantes/brunocarrasco.png" class="card-img" height="236" alt="">
+        <div class="card-img-overlay">
+          <h5>Sebastián Arana</h5>
+          <h6>Ing. Ciencias de la computación</h6>
+        </div>
+      </div>
+
+      <div class="card text-white" style="width: 196px">
+        <img src="../../../assets/integrantes/wilmartarazona.png" class="card-img" height="236" alt="">
+        <div class="card-img-overlay">
+          <h5>Sebastián Arana</h5>
+          <h6>Ing. Ciencias de la computación</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer id="footer" class="text-center text-lg-start bg-dark text-white">
+  <section class="p-4">
+    <div class="container text-center text-md-start mt-5">
+      <div class="row mt-3">
+
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <h4 class="fw-bold mb-4">UReceipt</h4>
+        </div>
+
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <h5 class="fw-bold mb-4">Información</h5>
+          <p><a href="#" class="text-reset">Inicio</a></p>
+          <p><a href="#" class="text-reset">Introducción</a></p>
+          <p><a href="#" class="text-reset">Nosotros</a></p>
+          <p><a href="#" class="text-reset">Iniciar Sesión</a></p>
+          <p><a href="#" class="text-reset">Registrarse</a></p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2021 Copyright: UReceipt.com
+  </div>
+
+</footer>
