--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   background-image: url("assets/fondo.jpg");
-  background-size: 100%;
+  background-size: cover;
+  background-size: 100vm;
 }
