add: navbar and others

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,7 @@
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <!-- Header-->
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
-  <a class="navbar-brand fs-1" href="#">
-    <img src="../../../assets/logosinfondo.png" height="30" alt="">
+  <a class="navbar-brand h1" href="#">
+    <img src="../../../assets/logo.png" height="60" alt="">
     UReceipt
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,14 +30,14 @@
 </nav>
 
 <!-- Presentacion-->
-<section class="container-fluid bg-transparent">
-  <div class="row bg-transparent">
-    <div class="col bg-primary">
-      <div class="container p-5">
+<section class="container-fluid">
+  <div class="row">
+    <div class="col bg-primary container p-5 pb-0">
+      <div class="">
         <h1 class="font-weight-bold text-white">Finanzas e</h1>
         <h1 class="font-weight-bold text-danger">ingeniería</h1>
       </div>
-      <div class="container p-4 text-white font-weight-bold">
+      <div class="text-white font-weight-bold">
         <ul>
           <li>Nicoll Yamira Malca Rojas</li>
           <li>Julissa Karol Ponte Isminio</li>
@@ -55,7 +54,7 @@
       </div>
     </div>
 
-    <div class="col bg-transparent">
+    <div class="col">
     </div>
   </div>
 </section>
@@ -64,18 +63,16 @@
 <section class="container-fluid">
   <div class="row">
     <div class="col bg-secondary container p-5">
-      <div>
-        <h1 class="font-weight-bold">INICIO DE</h1>
-        <h1>SESIÓN</h1>
-      </div>
+      <h1 class="font-weight-bold">INICIO DE</h1>
+      <h1>SESIÓN</h1>
     </div>
 
-    <div class="col p-4">
-      <div class="card text-center mx-auto" style="width: 50%">
+    <div class="col bg-white">
+      <div class="card text-center mx-auto m-5" style="width: 60%">
         <div>
           <img src="../../../assets/logo.png"  height="124" alt="">
         </div>
-        <div class="card-body">
+        <div class="card-body ">
           <form>
             <div class="form-group">
               <label for="numDocumento"></label>
@@ -85,10 +82,11 @@
               <label for="password"></label>
               <input type="password" class="form-control" id="password" placeholder="Contraseña">
             </div>
-            <button type="submit" class="btn btn-primary btn-block">INICIAR SESIÓN</button>
+            <button type="submit" class="btn btn-primary w-100 mt-4">INICIAR SESIÓN</button>
           </form>
-          <a href="#" class="card-link text-reset">¿Olvidaste tu contraseña?</a>
           <br>
+          <a href="#" class="card-link text-reset">¿Olvidaste tu contraseña?</a>
+          <br><br>
           <a href="#" class="card-link text-danger">Registrar una cuenta</a>
         </div>
       </div>
