--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<section class="vh-100" style="background-color: #eee">
+<app-navbar></app-navbar>
+<section class="vh-100 fondo" style="background-color: #eee">
   <div class="container vh-100">
     <div class="row d-flex justify-content-center align-items-center vh-100">
       <div class="card text-black" style="border-radius: 25px">
@@ -26,7 +26,7 @@
                     <span *ngIf="userForm.controls['nombre'].hasError('required') && userForm.controls['nombre'].touched">Campo requerido</span>
                   </div>
                 </div>
-                
+
 
                 <div class="d-flex flex-row align-items-center mb-4">
                   <i class="fa fa-envelope fa-lg me-3 fa-fw"></i>
