--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<section class="vh-100" style="background-color: #eee">
+<app-navbar></app-navbar>
+<section class="vh-100 fondo" style="background-color: #eee">
   <div class="container vh-100">
     <div class="row d-flex justify-content-center align-items-center vh-100">
       <div class="card text-black" style="border-radius: 25px">
