--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -5,3 +5,7 @@
     margin: .5rem 0;
     transition: border .1s linear;
 }
+.fondo {
+  background-image: url("../../../assets/fondo.jpg");
+  background-size: cover;
+}
