--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,20 +1,25 @@
 <app-navbar></app-navbar>
-<section class="vh-100 fondo" style="background-color: #eee">
-  <div class="container vh-100">
+<section class="vh-100 fondo" style="background-color: #eee" style="margin:auto">
+  <div class="container vh-100" style="width: 650px">
     <div class="row d-flex justify-content-center align-items-center vh-100">
       <div class="card text-black" style="border-radius: 25px">
-        <div class="card-body p-md-5">
-          <div class="row justify-content-center">
+        <div class="card-body" >
+          <div class="row justify-content-center" style="margin:0px">
+
+            <img src="../../../assets/trasfondo2.png" style="position: absolute; right: 745px; top: -244px; width: 1500px;">
+            
             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-              <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Ingresa a tu cuenta</p>
+              <!-- <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Ingresa a tu cuenta</p> -->
+              <img src="../../../assets/logo.png" style="position:relative; width: 90px; height: 95px; left: 60px; top: -10px; align-items:center;background: #FFFFFF;
+              box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
 
               <form class="mx-1 mx-md-4" [formGroup]="userForm" (submit)="login()">
 
-                <div class="d-flex flex-row align-items-center mb-4">
+                <div class="d-flex flex-row align-items-center">
                   <i class="fa fa-envelope fa-lg me-3 fa-fw"></i>
                   <div class="flex-fill mb-0">
-                    <input type="number" id="username" class="form-control" formControlName="username" placeholder="Username">
+                    <input type="number" id="username" class="form-control" formControlName="username" placeholder="Username" >
                     <span *ngIf="userForm.controls['username'].hasError('required') && userForm.controls['username'].touched">Campo requerido</span>
                   </div>
                 </div>
