--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,6 @@
 .fondo {
   background-image: url("../../../assets/fondo.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  height: 635px;
 }
