--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,12 @@
 <app-navbar></app-navbar>
-<section class="vh-100 fondo" style="background-color: #eee" style="margin:auto">
+<img src="../../../assets/trasfondo2.png" style="position: absolute; top: 94px; width: 750px; height:927px">
+<section class="vh-100 fondo" style="background-color: #eee; margin:auto; height: 40vh">
   <div class="container vh-100" style="width: 650px">
     <div class="row d-flex justify-content-center align-items-center vh-100">
       <div class="card text-black" style="border-radius: 25px">
         <div class="card-body" >
           <div class="row justify-content-center" style="margin:0px">
 
-            <img src="../../../assets/trasfondo2.png" style="position: absolute; right: 745px; top: -244px; width: 1500px;">
-            
             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
               <!-- <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Ingresa a tu cuenta</p> -->
