--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
-  <a class="navbar-brand h1" href="#">
+  <a class="navbar-brand fs-1 align-middle fw-bold texto" href="#">
     <img src="../../../assets/logo.png" height="60" alt="">
     UReceipt
   </a>
