--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -34,8 +34,15 @@ color: #BB5B5B;">Persona Natural</p>
           <div class="row justify-content-center" style="margin:0px">
             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-              <!-- <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Crear cuenta</p> -->
-              <p>Regístrate</p>
+              <!-- <p class="text-center h1">Regístrate</p> -->
+              <p style="
+              font-family: Roboto;
+              font-style: normal;
+              font-weight: normal;
+              font-size: 24px;
+              line-height: 28px;
+            
+              color: #000000; text-align: center" >Regístrate</p>
               <form class="mx-1 mx-md-4" [formGroup]="userForm" (submit)="register()">
 
                 <div class="d-flex flex-row align-items-center mb-4">
