Actualizar vista Cambiar Contraseña

--- a/src/app/components/cambiar-password/cambiar-password.component.html
+++ b/src/app/components/cambiar-password/cambiar-password.component.html
@@ -1,26 +1,70 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<section class="back-image">
-  <div>
-    <div class="row-cols-6">
-      <p>Cambiar Contraseña</p>
+<app-navbar></app-navbar>
+<div>
+  <div class="row">
+
+    <div class="layer-1 col-4">
+      <br>
+      <br>
+      <div class="text-center">
+        <p class="header-1">Cambiar</p>
+        <p class="header-2">contraseña</p>
+      </div>
     </div>
-    <div class="row-cols-6">
-      <form [formGroup]="userForm" (submit)="cambiarPassword()">
-        <div>
-          <input type="text" id="correo" formControlName="correo" placeholder="Correo">
-          <span *ngIf="userForm.controls['correo'].hasError('required') && userForm.controls['correo'].touched">Campo requerido</span>
-          <span *ngIf="userForm.controls['correo'].hasError('email') && userForm.controls['correo'].touched">Correo inválido</span>
-        </div>
+    <div class="col-8">
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="row" style="height: 60vh">
+        <div class="col"></div>
+        <div class="col-6" style="background: white; border: 50px solid white">
+          <div class="d-flex justify-content-center">
+            <img src="../../../assets/logo.png" height="60" style="background: #FFFFFF; box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.25); border-radius:70px">
+          </div>
+          <br>
+          <div>
+            <label style="font-size: 2vw">Cambiar contraseña</label>
+          </div>
+          <br>
+          <form [formGroup]="userForm" (submit)="cambiarPassword()">
+            <div>
+              <label>¿Cuál es tu correo?</label>
+            </div>
+            <div>
+              <input class="form-control" type="text" id="correo" formControlName="correo" placeholder="Correo">
+              <span *ngIf="userForm.controls['correo'].hasError('required') && userForm.controls['correo'].touched">
+                <p class="text-danger">Campo requerido</p>
+              </span>
+              <span *ngIf="userForm.controls['correo'].hasError('email') && userForm.controls['correo'].touched">
+                <p class="text-danger">Correo inválido</p>
+              </span>
+            </div>
 
-        <div>
-          <input type="password" id="password" formControlName="password" placeholder="Contraseña">
-          <span *ngIf="userForm.controls['password'].hasError('required') && userForm.controls['password'].touched">Campo requerido</span>
-        </div>
+            <div>
+              <label>
+                Crea una contraseña
+              </label>
+            </div>
+            <div>
+              <input class="form-control" type="password" id="password" formControlName="password" placeholder="Contraseña">
+              <span *ngIf="userForm.controls['password'].hasError('required') && userForm.controls['password'].touched">
+                <p class="text-danger">Campo requerido</p>
+              </span>
+            </div>
 
-        <div>
-          <button [disabled]="!userForm.valid">Cambiar contraseña</button>
+            <div>
+              <br>
+              <button class="form-control" style="background: #00305B" [disabled]="!userForm.valid">
+                <span class="text-light">
+                  Guardar
+                </span>
+              </button>
+            </div>
+          </form>
         </div>
-      </form>
+        <div class="col"></div>
+      </div>
     </div>
   </div>
-</section>
+</div>
